[gd_scene load_steps=38 format=3 uid="uid://dlbkch6iuy8gn"]

[ext_resource type="Script" uid="uid://dq21xphwqcv2x" path="res://addons/fp_controller/scripts/player.gd" id="1_5ras8"]
[ext_resource type="Script" uid="uid://b78cs6djckl0b" path="res://addons/fp_controller/scripts/smooth_camera.gd" id="2_1py82"]
[ext_resource type="Script" uid="uid://dwvci74et3dd5" path="res://addons/fp_controller/scripts/player_state_machine.gd" id="2_wwa58"]
[ext_resource type="PackedScene" uid="uid://cs08r7nmhcpm" path="res://game/scenes/items/torch/torch.tscn" id="3_njw88"]
[ext_resource type="Script" uid="uid://b62fesxm4ghgr" path="res://addons/fp_controller/scripts/player_move_state/idle.gd" id="3_xe000"]
[ext_resource type="Script" uid="uid://h11hds7gra4b" path="res://addons/fp_controller/scripts/player_move_state/jump.gd" id="4_1lr3q"]
[ext_resource type="Script" uid="uid://brvfx3j8hnniy" path="res://addons/fp_controller/scripts/player_move_state/walk.gd" id="5_bwgwe"]
[ext_resource type="Script" uid="uid://mhcftrcobu43" path="res://addons/fp_controller/scripts/player_move_state/sprint.gd" id="6_b4xrx"]
[ext_resource type="Script" uid="uid://cli3bai5el45l" path="res://addons/fp_controller/scripts/player_move_state/fall.gd" id="7_dv6ye"]
[ext_resource type="Script" uid="uid://cj5rso6hdlf1a" path="res://addons/fp_controller/scripts/player_move_state/crouch.gd" id="9_yxb0u"]
[ext_resource type="Script" uid="uid://ojxq70pe2ua2" path="res://addons/fp_controller/scripts/player_move_state/climb.gd" id="10_o7gmx"]
[ext_resource type="Script" uid="uid://bsl0i2ek6vq1s" path="res://addons/fp_controller/scripts/player_move_state/grab.gd" id="11_gkc45"]
[ext_resource type="Script" uid="uid://b6xsykgp7h7pj" path="res://addons/fp_controller/scripts/player_move_state/slide.gd" id="12_bqyfq"]
[ext_resource type="Script" uid="uid://bix7vl530vbcc" path="res://addons/fp_controller/scripts/player_ui.gd" id="12_d7xi0"]
[ext_resource type="AudioStream" uid="uid://cjy71pksafbxt" path="res://assets/sounds/breath/runandbreath.mp3" id="15_62dvf"]
[ext_resource type="AudioStream" uid="uid://dggabx0cnimyv" path="res://assets/sounds/breath/breathing-slow-distraught-tired.mp3" id="16_y16om"]
[ext_resource type="AudioStream" uid="uid://bj663f10ud1i8" path="res://assets/sounds/breath/breath.mp3" id="17_nycc1"]
[ext_resource type="AudioStream" uid="uid://bvce1sqpwsfpa" path="res://assets/sounds/footsteps/footsteps walking outside.mp3" id="18_bjt1r"]
[ext_resource type="AudioStream" uid="uid://cdtfkktwkhq6u" path="res://assets/sounds/footsteps/snow-footsteps-running.mp3" id="19_jajtq"]
[ext_resource type="AudioStream" uid="uid://doyfttd6rsoab" path="res://assets/sounds/jump-sound.mp3" id="20_w7r7y"]
[ext_resource type="AudioStream" uid="uid://dfiednosqnq0j" path="res://assets/sounds/damage-scream.wav" id="21_hwrxm"]

[sub_resource type="Animation" id="Animation_5udu4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Placeholder_Collider:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Placeholder_Collider/Placeholder_BodyMesh:mesh:height")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Placeholder_Collider:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(2.08165e-12, 0.9, 2.08165e-12)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Placeholder_Collider/Placeholder_BodyMesh:mesh:radius")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.5]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Placeholder_Collider:shape:radius")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.5]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CameraPivot:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(2.08165e-12, 1.5, 2.08165e-12)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CrouchRaycast:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.8, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("UserInterface/ColorRect:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_abp0t"]
resource_name = "crouch"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Placeholder_Collider:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.8, 0.9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Placeholder_Collider/Placeholder_BodyMesh:mesh:height")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.8, 0.9]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Placeholder_Collider:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(2.08165e-12, 0.9, 2.08165e-12), Vector3(2.08165e-12, 0.45, 2.08165e-12)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Placeholder_Collider/Placeholder_BodyMesh:mesh:radius")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.5, 0.45]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Placeholder_Collider:shape:radius")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.5, 0.45]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CameraPivot:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(2.08165e-12, 1.5, 2.08165e-12), Vector3(2.08165e-12, 0.6, 2.08165e-12)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CrouchRaycast:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.8, 0), Vector3(0, 0.9, 0)]
}

[sub_resource type="Animation" id="Animation_62dvf"]
resource_name = "damage"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UserInterface/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4kkkr"]
_data = {
&"RESET": SubResource("Animation_5udu4"),
&"crouch": SubResource("Animation_abp0t"),
&"damage": SubResource("Animation_62dvf")
}

[sub_resource type="Animation" id="Animation_caog8"]
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraPivot/SmoothCamera:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(2),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_463io"]
resource_name = "view_bobbing"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraPivot/SmoothCamera:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.366667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gsp4e"]
_data = {
&"RESET": SubResource("Animation_caog8"),
&"view_bobbing": SubResource("Animation_463io")
}

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_irl70"]
height = 1.8

[sub_resource type="CapsuleMesh" id="CapsuleMesh_aufvi"]
height = 1.8

[sub_resource type="Animation" id="Animation_ttf0e"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_njw88"]
resource_name = "won"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vfxpb"]
_data = {
&"RESET": SubResource("Animation_ttf0e"),
&"won": SubResource("Animation_njw88")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_62dvf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y16om"]
bg_color = Color(1, 0.00392157, 0.176471, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nycc1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bjt1r"]
bg_color = Color(0.0980392, 0.6, 0.376471, 1)

[node name="Player" type="CharacterBody3D" groups=["Player"]]
collision_layer = 4
script = ExtResource("1_5ras8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_4kkkr")
}

[node name="ViewBobbingPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_gsp4e")
}

[node name="CrouchRaycast" type="RayCast3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)
target_position = Vector3(0, 1, 0)

[node name="RaycastClimbDetector" type="Node3D" parent="."]

[node name="BottomRaycast" type="RayCast3D" parent="RaycastClimbDetector"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 0.25, 2.08165e-12)
target_position = Vector3(2.08165e-12, 2.08165e-12, -0.75)

[node name="MiddleRaycast" type="RayCast3D" parent="RaycastClimbDetector"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 0.9, 2.08165e-12)
target_position = Vector3(2.08165e-12, 2.08165e-12, -0.75)

[node name="TopRaycast" type="RayCast3D" parent="RaycastClimbDetector"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 1.8, 2.08165e-12)
target_position = Vector3(2.08165e-12, 2.08165e-12, -0.75)

[node name="SurfaceRaycasts" type="Node3D" parent="RaycastClimbDetector"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, -0.75)

[node name="ProjectedHeightRaycast" type="RayCast3D" parent="RaycastClimbDetector/SurfaceRaycasts"]
unique_name_in_owner = true
target_position = Vector3(0, 0.5, 0)
hit_from_inside = true

[node name="SurfaceRaycast" type="RayCast3D" parent="RaycastClimbDetector/SurfaceRaycasts"]
unique_name_in_owner = true
target_position = Vector3(2.08165e-12, -2.7, 2.08165e-12)
hit_from_inside = true

[node name="ClimbableRaycasts" type="Node3D" parent="RaycastClimbDetector"]

[node name="LeftClimbableRaycast" type="RayCast3D" parent="RaycastClimbDetector/ClimbableRaycasts"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 2, -0.75)
target_position = Vector3(-0.4, 2.08165e-12, 2.08165e-12)

[node name="RightClimbableRaycast" type="RayCast3D" parent="RaycastClimbDetector/ClimbableRaycasts"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 2, -0.75)
target_position = Vector3(0.4, 2.08165e-12, 2.08165e-12)

[node name="Placeholder_Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 0.9, 2.08165e-12)
shape = SubResource("CapsuleShape3D_irl70")

[node name="Placeholder_BodyMesh" type="MeshInstance3D" parent="Placeholder_Collider"]
visible = false
mesh = SubResource("CapsuleMesh_aufvi")
skeleton = NodePath("../..")

[node name="CameraPivot" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 1.5, 2.08165e-12)

[node name="SmoothCamera" type="Camera3D" parent="CameraPivot" groups=["PlayerCamera"]]
script = ExtResource("2_1py82")

[node name="ReflectionProbe" type="ReflectionProbe" parent="CameraPivot/SmoothCamera"]
visible = false

[node name="RightHand" type="Node3D" parent="CameraPivot/SmoothCamera"]
transform = Transform3D(0.879058, 0.476714, 0, -0.476714, 0.879058, 0, 0, 0, 1, 0.3, -0.247, -0.275)

[node name="LeftHand" type="Node3D" parent="CameraPivot/SmoothCamera"]
transform = Transform3D(0.951562, -0.307456, -1.45751e-10, 0.307209, 0.950797, -0.0400969, 0.012328, 0.0381547, 0.999196, -0.266, -0.248, -0.252)

[node name="Torch" parent="CameraPivot/SmoothCamera/LeftHand" instance=ExtResource("3_njw88")]

[node name="PickUp" type="RayCast3D" parent="CameraPivot/SmoothCamera"]
transform = Transform3D(1.00021, 0, 0, 0, -1.0248e-07, -1.00021, 0, 2.34447, -4.37206e-08, 0, 0, 0)
collision_mask = 2

[node name="StateMachine" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_wwa58")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_breath", "stamina")]
script = ExtResource("3_xe000")
idle_breath = NodePath("../../IdleBreath")
stamina = NodePath("../../UserInterface/Stamina")

[node name="Jump" type="Node" parent="StateMachine" node_paths=PackedStringArray("jump_2")]
script = ExtResource("4_1lr3q")
jump_2 = NodePath("../../Jump2")

[node name="Walk" type="Node" parent="StateMachine" node_paths=PackedStringArray("walk_breath", "walking_footstep", "stamina")]
script = ExtResource("5_bwgwe")
walk_breath = NodePath("../../WalkBreath")
walking_footstep = NodePath("../../WalkingFootstep")
stamina = NodePath("../../UserInterface/Stamina")

[node name="Sprint" type="Node" parent="StateMachine" node_paths=PackedStringArray("run_breath", "run_footsteps", "stamina")]
script = ExtResource("6_b4xrx")
run_breath = NodePath("../../RunBreath")
run_footsteps = NodePath("../../RunningFootstep")
stamina = NodePath("../../UserInterface/Stamina")

[node name="Fall" type="Node" parent="StateMachine"]
script = ExtResource("7_dv6ye")

[node name="Crouch" type="Node" parent="StateMachine"]
script = ExtResource("9_yxb0u")

[node name="Climb" type="Node" parent="StateMachine"]
script = ExtResource("10_o7gmx")

[node name="Grab" type="Node" parent="StateMachine"]
script = ExtResource("11_gkc45")

[node name="Slide" type="Node" parent="StateMachine"]
script = ExtResource("12_bqyfq")

[node name="UserInterface" type="Control" parent="."]
top_level = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(576, 324)
mouse_filter = 2
script = ExtResource("12_d7xi0")

[node name="CrosshairContainer" type="CenterContainer" parent="UserInterface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Crosshair" type="Control" parent="UserInterface/CrosshairContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="UserInterface/CrosshairContainer"]
visible = false
layout_mode = 2
text = "PickUp"

[node name="Victory" type="CenterContainer" parent="UserInterface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="UserInterface/Victory"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UserInterface/Victory/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="UserInterface/Victory/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "YOU HAVE SUCCESFULLY BANISHED
THE GHOST"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="UserInterface/Victory/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 170

[node name="Restart" type="Button" parent="UserInterface/Victory/PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 30)
layout_mode = 2
text = "Restart"

[node name="Quit" type="Button" parent="UserInterface/Victory/PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 30)
layout_mode = 2
text = "Quit"

[node name="AnimVictory" type="AnimationPlayer" parent="UserInterface/Victory"]
libraries = {
&"": SubResource("AnimationLibrary_vfxpb")
}

[node name="HealthBar" type="ProgressBar" parent="UserInterface"]
layout_mode = 0
offset_left = 7.0
offset_top = 47.0
offset_right = 303.0
offset_bottom = 68.0
theme_override_styles/background = SubResource("StyleBoxFlat_62dvf")
theme_override_styles/fill = SubResource("StyleBoxFlat_y16om")
value = 50.0
show_percentage = false

[node name="Retry" type="Button" parent="UserInterface"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -50.0
offset_top = 49.0
offset_bottom = 80.0
grow_horizontal = 0
text = "Retry"

[node name="ColorRect" type="ColorRect" parent="UserInterface"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0, 0, 0.615686)

[node name="Stamina" type="ProgressBar" parent="UserInterface"]
layout_mode = 0
offset_left = 5.0
offset_top = 73.0
offset_right = 305.0
offset_bottom = 92.0
theme_override_styles/background = SubResource("StyleBoxFlat_nycc1")
theme_override_styles/fill = SubResource("StyleBoxFlat_bjt1r")
max_value = 200.0
value = 50.0
show_percentage = false

[node name="RunBreath" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = ExtResource("15_62dvf")
volume_db = 5.0
max_db = 6.0

[node name="IdleBreath" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = ExtResource("16_y16om")
volume_db = -5.0
max_db = 6.0
area_mask = 5

[node name="WalkBreath" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = ExtResource("17_nycc1")
volume_db = -20.0

[node name="WalkingFootstep" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("18_bjt1r")
volume_db = 10.0

[node name="RunningFootstep" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("19_jajtq")
volume_db = -10.0

[node name="Jump2" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("20_w7r7y")

[node name="Damage" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("21_hwrxm")

[connection signal="transitioned" from="StateMachine" to="." method="_on_state_machine_transitioned"]
[connection signal="draw" from="UserInterface/CrosshairContainer/Crosshair" to="UserInterface" method="_on_crosshair_draw"]
[connection signal="pressed" from="UserInterface/Victory/PanelContainer/VBoxContainer/HBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="UserInterface/Victory/PanelContainer/VBoxContainer/HBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="UserInterface/Retry" to="." method="_on_retry_pressed"]
